force-app/main/default/objects/building_account__c/building_account__c.object-meta.xml
<CustomObject>
    <description>Related Account with Building</description>
    <label>Building-Tenant</label>
    <nameField>
        <label>Building-Account Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Building-Tenants</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>