force-app/main/default/objects/building_account__c/fields/BA_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>BA_Company_Name__c</fullName>
    <formula>Building_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Name</label>
    <type>Text</type>
</CustomField>