force-app/main/default/objects/building_account__c/fields/BA_LCD__c.field-meta.xml
<CustomField>
    <fullName>BA_LCD__c</fullName>
    <formula>Building_Account__r.LCD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LCD</label>
    <type>Date</type>
</CustomField>