force-app/main/default/objects/building_account__c/fields/BA_LEXP__c.field-meta.xml
<CustomField>
    <fullName>BA_LEXP__c</fullName>
    <formula>Building_Account__r.LEXP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LEXP</label>
    <type>Date</type>
</CustomField>