force-app/main/default/objects/building_account__c/fields/BA_RSF__c.field-meta.xml
<CustomField>
    <fullName>BA_RSF__c</fullName>
    <formula>Building_Account__r.RSF__c</formula>
    <label>RSF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>