force-app/main/default/objects/building_account__c/fields/BA_Suite_Floor__c.field-meta.xml
<CustomField>
    <fullName>BA_Suite_Floor__c</fullName>
    <formula>Building_Account__r.Suite__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Suite\Floor</label>
    <type>Text</type>
</CustomField>