force-app/main/default/objects/building_account__c/fields/Building_Account__c.field-meta.xml
<CustomField>
    <fullName>Building_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Related Building - Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>building_accounts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>