force-app/main/default/objects/building_account__c/fields/Building_BA__c.field-meta.xml
<CustomField>
    <fullName>Building_BA__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Related Building - Accounts</description>
    <label>Building</label>
    <referenceTo>Building__c</referenceTo>
    <relationshipName>building_accounts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>